# utils

./: .gitignore  README.md  pyproject.toml  test_coverage.bat
src/gtkycu_utils/filename/: __init__.py
src/gtkycu_utils/filename/variables/: __init__.py  _registry.py  _timestamp.py  _uuid4.py
test/filename/variables/: test_timestamp.py  test_uuid4.py  test_variables.py
