[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gtkycu-utils"
authors = [{ name = "Jadon Calvert", email = "calvertjadon@gmail.com" }]
description = "Common utilities for internal tools"
version = "1.0.0"
requires-python = ">=3.12,<4"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build"]

[project.scripts]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
testpaths = [ "test" ]

[tool.coverage.run]
source = ["src"]